Fix misalignments in members list table header

--- a/themes/climatecolab-theme/src/main/webapp/css/style/components/_blueheaderbar.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/style/components/_blueheaderbar.scss
@@ -151,7 +151,7 @@ thead.blueheaderbar {
 /* users/members page */
 .blueheaderbar .user {
   float: left;
-  width: 312px;
+  width: 308px;
   height: 37px;
   padding-left: 9px;
 }
@@ -179,7 +179,7 @@ thead.blueheaderbar {
 
 .blueheaderbar .activity {
   float: left;
-  width: 90px;
+  width: 62px;
   height: 37px;
 }
 
@@ -193,7 +193,7 @@ thead.blueheaderbar {
 
 .blueheaderbar .category {
   float: left;
-  width: 115px;
+  width: 113px;
   height: 37px;
 }
 
@@ -201,13 +201,13 @@ thead.blueheaderbar {
   font-weight: bold;
   height: 27px;
   padding-top: 10px;
-  margin-left: 10px;
+  margin-left: 18px;
   display: inline-block;
 }
 
 .blueheaderbar .seniority {
   float: left;
-  width: 115px;
+  width: 121px;
   height: 37px;
 }
 
